// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > snapshot: no props 1`] = `
<a
  class="ucl-link css-f2zime"
  data-testid="ucl-link"
>
  test
</a>
`;

exports[`Link > snapshot: testId prop 1`] = `
<a
  class="ucl-link css-f2zime"
  data-testid="test123"
>
   testidlink 
</a>
`;
